gedcom/tests/snapshots/tests__encodings@ansel_specified.ged-2.snap
---
source: gedcom/tests/tests.rs
description: "0 HEAD\r\n1 CHAR ANSEL\r\n0 SOME t�e�a\r\n0 TRLR\r\n"
expression: kdl
input_file: gedcom/tests/encoding_inputs/ansel_specified.ged
---
HEAD {
    CHAR "ANSEL"
}
SOME "tèá"
TRLR
